examples/invalid/redeclarations/redeclarationVar.vbr
track a(){
    -- a: quarter | 
    |>("Sueltale Rick") |
}

moderato(){
    a: quarter <-> 10 |
    |>(a) |
    a: whole | 
}